test/functions/bradc/varFns/declVarRetHalt.good
declVarRetHalt.chpl:2: error: halt reached
