test/functions/bradc/varFns/declVarRetHalt.chpl
proc p() ref : int {
   halt();
}
p();
